update - extension added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <section class="beers">
                     <h2>Beers</h2>
                     <ul class="beers-list">
-                        <li>bbb</li>
                     </ul>
                 </section>
 
@@ -32,8 +31,19 @@
                     <div class="form-group">
                         <input type="text" class="category-input form-control" placeholder="Category">
                     </div>
-
+                    <div class="form-group">
+                        <select name="ratelist" class="rate-input">
+                            <option value="-999">rate</option>
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </div>
                     <button class="btn btn-primary post-beer" type="button">Post</button>
+                    <button class="btn btn-primary sort-beer" type="button">Sort</button>
                 </form>
             </div>
         </div>
